# biojet

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  conanfile.py
cmake/Modules/: Paths.cmake
cmake/Toolchains/: overrides-clang.cmake  overrides-gcc.cmake  toolchain-clang.cmake  toolchain-gcc.cmake
include/biojet/: blocking_queue.hpp  errors.hpp  result.hpp  serial_port.hpp  status_code.hpp  transport.hpp  unique_handle.hpp
include/biojet/io/: serial_configuration.hpp  serial_port.hpp
include/biojet/utility/: unique_handle.hpp
source/: CMakeLists.txt  serial_port.cpp  serial_port_unix.cpp  serial_port_unix.hpp
source/io/: serial_port.cpp  serial_port_unix.cpp  serial_port_unix.hpp
tests/integration/: CMakeLists.txt  serial_port_tests.cpp  smoke_tests.cpp  test_main.cpp
tests/unit/: CMakeLists.txt  serial_port_unit_tests.cpp  test_main.cpp
